add check